Tschebyscheff-Interpolation hinzufügen

--- a/numerik.tex
+++ b/numerik.tex
@@ -500,7 +500,15 @@ TODO: Satz 14 (über den Interpolationsfehler).
 
 \subsubsection{Tschebyscheff-Interpolation}
 
-TODO
+Tschebyscheff-Stützstellen: $x_n = \cos(\frac{2n + 1}{2N + 2} \pi)$ für $n = 0,
+\dots, N$.
+
+\textbf{Kondition:}
+\begin{itemize}
+    \item $\Lambda_N \le 3$ für $N \le 20$
+    \item $\Lambda_N \le 4$ für $N \le 100$
+    \item $\Lambda_N \approx \frac{2}{\pi} \log N$ für $N \to \infty$
+\end{itemize}
 
 \subsection{Kubische Spline-Interpolation}
 
